View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026342 | Open CASCADE | OCCT:Data Exchange | public | 2015-06-15 12:41 | 2015-10-23 20:51 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0026342: No materials are read from STEP | ||||
Description | It seems that DRAW command ReadStep does not read materials if they are present in STEP file. At least, I could not get materials reading couple of files containing those. See Steps to Reproduce and related issues. | ||||
Steps To Reproduce | pload XDE ReadStep D [locate_data_file dm1-oc-214.stp] XDumpDF D | ||||
Tags | No tags attached. | ||||
Test case number | bugs step bug26342 | ||||
|
Branch CR26342 has been created by ink. SHA-1: 26d50586939d3fc7f6e74fb8a2af41f5d925c681 Detailed log of new commits: Author: ink Date: Wed Jun 24 11:53:19 2015 +0300 0026342: No materials are read from STEP Changed number of arguments for descriptive_representation_item (for the case when description is absent). |
|
Branch CR26342 is ready to be tested |
|
Dear BugMaster, Branch CR26342 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 26d50586939d3fc7f6e74fb8a2af41f5d925c681 Number of compiler warnings: occt component : Linux: 25 (25 on master) Windows: 0 (0 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR26342-master-occt-64/Debian70-64/bugs/step/bug26342.html http://occt-tests/CR26342-master-occt-64/Windows-64-VC10/bugs/step/bug26342.html bugs step bug26342: OK Testing on Linux: occt component : Total MEMORY difference: 97517088 / 98277302 [-0.77%] Total CPU difference: 18274.699999999986 / 18540.74000000014 [-1.43%] products component : Total MEMORY difference: 24208573 / 24306506 [-0.40%] Total CPU difference: 7964.390000000035 / 7856.900000000035 [+1.37%] Testing on Windows: occt component : Total MEMORY difference: 56649156 / 56830295 [-0.32%] Total CPU difference: 17380.10261019894 / 17635.257845798857 [-1.45%] products component : Total MEMORY difference: 15546069 / 15550884 [-0.03%] Total CPU difference: 6341.830652499972 / 6414.932721099968 [-1.14%] There are no differences in images found by testdiff. |
|
Branch CR26342 has been updated by mkv. SHA-1: 5ddbffb07f82143d2772efb04ee9a218169982bf Detailed log of new commits: Author: mkv Date: Mon Jun 29 18:36:03 2015 +0300 Test case for issue CR26342 |
|
Dear ink, could you please review following test case bugs step bug26342 |
|
Ok |
|
Dear BugMaster, Branch CR26342 is TESTED. |
|
Branch CR26342 has been deleted by inv. SHA-1: 5ddbffb07f82143d2772efb04ee9a218169982bf |
occt: master 59e34991 2015-07-02 11:30:42
Committer: bugmaster Details Diff |
0026342: No materials are read from STEP Changed number of arguments for descriptive_representation_item (for the case when description is absent). Test case for issue CR26342 |
Affected Issues 0026342 |
|
mod - src/RWStepRepr/RWStepRepr_RWDescriptiveRepresentationItem.cxx | Diff File | ||
add - tests/bugs/step/bug26342 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-06-15 12:41 |
|
New Issue | |
2015-06-15 12:41 |
|
Assigned To | => gka |
2015-06-15 12:42 |
|
Relationship added | related to 0023251 |
2015-06-15 12:42 |
|
Relationship added | related to 0025910 |
2015-06-22 11:53 |
|
Assigned To | gka => ink |
2015-06-22 11:53 |
|
Status | new => assigned |
2015-06-24 11:53 | git | Note Added: 0042408 | |
2015-06-24 11:54 |
|
Assigned To | ink => gka |
2015-06-24 11:54 |
|
Status | assigned => resolved |
2015-06-24 12:20 |
|
Note Added: 0042410 | |
2015-06-24 12:20 |
|
Assigned To | gka => bugmaster |
2015-06-24 12:20 |
|
Status | resolved => reviewed |
2015-06-24 16:54 |
|
Assigned To | bugmaster => mkv |
2015-06-29 18:36 |
|
Note Added: 0042565 | |
2015-06-29 18:36 | git | Note Added: 0042566 | |
2015-06-29 18:37 |
|
Note Added: 0042567 | |
2015-06-29 18:37 |
|
Assigned To | mkv => ink |
2015-06-29 18:37 |
|
Status | reviewed => feedback |
2015-06-29 18:37 |
|
Test case number | => bugs step bug26342 |
2015-07-01 08:03 |
|
Note Added: 0042620 | |
2015-07-01 08:04 |
|
Assigned To | ink => mkv |
2015-07-01 10:06 |
|
Note Added: 0042626 | |
2015-07-01 10:06 |
|
Assigned To | mkv => bugmaster |
2015-07-01 10:06 |
|
Status | feedback => tested |
2015-07-03 15:27 | bugmaster | Changeset attached | => occt master 59e34991 |
2015-07-03 15:27 | bugmaster | Status | tested => verified |
2015-07-03 15:27 | bugmaster | Resolution | open => fixed |
2015-07-03 15:31 | bugmaster | Target Version | 7.1.0 => 7.0.0 |
2015-08-14 10:57 | git | Note Added: 0044213 | |
2015-08-26 11:08 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-10-16 14:56 |
|
Status | verified => closed |
2015-10-23 20:51 |
|
Fixed in Version | => 6.9.1 |