0026342: No materials are read from STEP

Changed number of  arguments for descriptive_representation_item (for the case when description is absent).

Test case for issue CR26342